--- a/index.html
+++ b/index.html
@@ -2,49 +2,18 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/cyberlife-icone.png" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="CyberLife">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-
-    <!-- Meta tags para PWA -->
-    <meta name="application-name" content="CyberLife">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="CyberLife">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="msapplication-TileColor" content="#000000">
-    <meta name="msapplication-TileImage" content="/cyberlife-icone.png">
-
-    <!-- Links para manifest e service worker -->
-    <link rel="manifest" href="/manifest.json">
-    <link rel="apple-touch-icon" href="/cyberlife-icone.png">
-
-    <title>CyberLife V2 - A Experiência Gamer Definitiva</title>
-
+    <title>CyberLife V2</title>
     <!-- Google Model Viewer para visualização 3D -->
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.3.0/model-viewer.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
-
-    <!-- Registro do Service Worker -->
-    <script>
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/service-worker.js')
-            .then(registration => {
-              console.log('Service Worker registrado com sucesso:', registration.scope);
-            })
-            .catch(error => {
-              console.log('Falha ao registrar o Service Worker:', error);
-            });
-        });
-      }
-    </script>
-
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
